# Methods-of-Computations

./: .gitignore  3.1.ipynb  5.1.ipynb  5.2.ipynb  CMakeLists.txt  README.md  main.cpp
Solving_nonlinear_equations/: CMakeLists.txt  main.cpp
Solving_nonlinear_equations/src/algorithm/methods/: ModifiedNewtonMethod.h
algebraic_interpolation/: CMakeLists.txt  main.cpp
algebraic_interpolation/src/InterpolationCalculator/: InterpolationCalculator.cpp
algebraic_interpolation/src/algorithm/: IPolynomCalculator.h
algebraic_interpolation/src/algorithm/LagrangeMethod/: LagrangeMethod.cpp  LagrangeMethod.h
algebraic_interpolation/src/algorithm/NewtonMethod/: NewtonMethod.cpp  NewtonMethod.h
algorithm/: CMakeLists.txt
algorithm/Interpolation/: CMakeLists.txt
algorithm/interpolation/: CMakeLists.txt
algorithm/interpolation/include/: LagrangeMethod.h  NewtonMethod.h
algorithm/interpolation/include/utils/: InterpolationCalculator.h
algorithm/interpolation/src/: LagrangeMethod.cpp  NewtonMethod.cpp
algorithm/interpolation/src/utils/: InterpolationCalculator.cpp
algorithm/inverse_interpolation/: CMakeLists.txt
algorithm/inverse_interpolation/include/: MonotoneReverseInterpolator.h  ReverseInterpolator.h
algorithm/inverse_interpolation/include/utils/: IReverseInterpolator.h
algorithm/inverse_interpolation/src/: MonotoneReverseInterpolator.cpp  ReverseInterpolator.cpp
algorithm/numerical_differentiator/: CMakeLists.txt
algorithm/numerical_differentiator/include/: NumericalDifferentiator.h
algorithm/numerical_differentiator/src/: NumericalDifferentiator.cpp
algorithm/solving_nonlinear_equations/: CMakeLists.txt
algorithm/solving_nonlinear_equations/include/: BisectionMethod.h  ModifiedNewtonMethod.h  NewtonMethod.h  SecantMethod.h
algorithm/solving_nonlinear_equations/include/utils/: algorithm.h  interval.h
algorithm/solving_nonlinear_equations/src/: BisectionMethod.cpp  ModifiedNewtonMethod.cpp  NewtonMethod.cpp
differentiator/: CMakeLists.txt  main.cpp
inverse_algebraic_interpolation/: CMakeLists.txt  main.cpp
inverse_algebraic_interpolation/src/: IReverseInterpolator.h
inverse_algebraic_interpolation/src/MonotoneReverseInterpolator/: MonotoneReverseInterpolator.cpp  MonotoneReverseInterpolator.h
inverse_algebraic_interpolation/src/ReverseInterpolator/: ReverseInterpolator.cpp  ReverseInterpolator.h
solving_nonlinear_equations/: CMakeLists.txt  main.cpp
solving_nonlinear_equations/src/: interval.h
solving_nonlinear_equations/src/algorithm/: algorithm.h
solving_nonlinear_equations/src/algorithm/methods/: BisectionMethod.cpp  BisectionMethod.h  ModifiedNewtonMethod.cpp  ModifiedNewtonMethod.h  NewtonMethod.cpp  NewtonMethod.h  SecantMethod.cpp  SecantMethod.h
src/: equation.h  interval.h
src/algorithm/: algorithm.h
src/algorithm/methods/: BisectionMethod.cpp  BisectionMethod.h  ModifiedNewtonMethod.cpp  ModifiedNewtonMethod.h  NewtonMethod.cpp  NewtonMethod.h  SecantMethod.cpp  SecantMethod.h
